# Streamdeck-Midibutton

./: .gitignore  CMakeLists.txt  README.md
.agents/: AGENTS.md
Sources/: StreamDeckMidiButton.cpp  StreamDeckMidiButton.h
Sources/Common/: EPLJSONUtils.h  ESDBasePlugin.h  ESDLocalizer.h  ESDUtilities.h  ESDUtilitiesWindows.cpp
co.uk.clarionmusic.midibutton.sdPlugin/: manifest.json
co.uk.clarionmusic.midibutton.sdPlugin/propertyinspector/js/: pi_win.js
